# Seum

./: .gitignore  CMakeLists.txt  README.md  build.bat  run.bat  test.bat  세움-명세-v1.0.md  세움-명세-v1.1.md  세움-명세-v1.2.md  세움-명세-v1.3.md  세움-명세-v1.4.md  세움-명세-v1.5.md  세움-명세-v1.6.md  세움-명세-v1.7.md  세움-빌드.md  세움-설계로드맵.md  세움-전체계획서.md  프로그래밍예시.md
bank/: bank_loan_system_dev_spec.md  bank_loan_system_dev_spec_v2.md  sovereign_citizen_genesis_contract.md  understanding_bank_loans_highschool.md  세움-금융-설계초안.md  세움-은행-쉬운설명.md
contracts/: jjjajh_STD_Cal.html  jjjajh_STD_SC.sol
examples/: annyeong.세움  hello.세움  test_error.세움  v02b_demo.세움  v02c_demo.세움  v02d_demo.세움  v02e_demo.세움  v03d_text.txt  v03e_time_test.세움  나의은행.세움  레코드.세움  마실은행.세움  용사이동.세움  은행.세움  자유은행.세움  지갑.세움  함수값.세움
lib/: 보여주기.담음  보여주기.세움  시간.담음  시간.세움
src/: ast.cc  ast.h  bytecode.cc  bytecode.h  common.h  dameum.cc  dameum.h  environment.cc  environment.h  error_reporter.cc  error_reporter.h  interpreter.cc  interpreter.h  ir.cc  ir.h  jamo_huffman.cc  jamo_huffman.h  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  token.cc  token.h  utf8.cc  utf8.h  value.cc  value.h  vm.cc  vm.h
src/modules/: builtin.cc  builtin.h  finance.cc  finance.h  native_bridge.cc  native_bridge.h  time.cc  time.h  time_internal.h
tests/: CMakeLists.txt  test_bytecode.cc  test_dameum.cc  test_integration.cc  test_interpreter.cc  test_ir.cc  test_jamo.cc  test_lexer.cc  test_parser.cc  test_time.cc  test_utf8.cc  test_vm.cc
기둥/: okneo31 안재현 스탠더드와 스마트컨츄랙.md
